Definitive fix for flickering by disabling user select

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-::selection {
-	background-color: transparent;
+.unselectable {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;
 }
 
 html, body {
